fixed compatibility issue with the provided RDP tree file; the trailing semicolon made pplacer not work. updated notebooks for figures 4 and 6.

--- a/notebooks/fig4_cross_validation.ipynb
+++ b/notebooks/fig4_cross_validation.ipynb
@@ -606,7 +606,7 @@
    "id": "0a253dc0-c0b7-410b-aa4f-f768ffda45d3",
    "metadata": {},
    "source": [
-    "# Zero-abundance bin prediction\n",
+    "# Zero-abundance bin prediction (Supp. Figure)\n",
     "\n",
     "Errors specific for taxa whose abundances are below a threshold (1e-5 for absolute abund, 1e-10 for relative abund)"
    ]
