updated differential_abundance/ folder. Moved CSV files into data/ directory.

--- a/scripts/differential_abundance/data_sets_prep.ipynb
+++ b/scripts/differential_abundance/data_sets_prep.ipynb
@@ -944,9 +944,9 @@
     "    elif x<=35.5:\n",
     "        y=1.5\n",
     "    elif x<=42.5:\n",
-    "        y=2.0     \n",
+    "        y=2.0\n",
     "    elif x<=50.5:\n",
-    "        y=2.5        \n",
+    "        y=2.5\n",
     "    else:\n",
     "        y=3.0\n",
     "    return y"
@@ -2650,20 +2650,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "directory='out'\n",
-    "if not os.path.exists(directory):\n",
-    "    os.makedirs(directory)\n",
-    "counts_out.to_csv('out/'+name+'_of_counts.csv')\n",
-    "meta_out.to_csv('out/'+name+'_of_meta.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 164,
    "metadata": {},
    "outputs": [
@@ -3093,6 +3079,19 @@
    ]
   },
   {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": 163,
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "outdir = Path().resolve().parent.parent / \"datasets\" / \"gibson\"\n",
+    "counts_out.to_csv(outdir / name / f'{name}_of_counts.csv')\n",
+    "meta_out.to_csv(outdir / name / f'{name}_of_meta.csv')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 165,
    "metadata": {},
@@ -3327,8 +3326,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "counts_out.to_csv('out/'+name+'_phylum_counts.csv')\n",
-    "meta_out.to_csv('out/'+name+'_phylum_meta.csv')"
+    "counts_out.to_csv(outdir / name / f'{name}_phylum_counts.csv')\n",
+    "meta_out.to_csv(outdir / name / f'{name}_phylum_meta.csv')"
    ]
   },
   {
