added up-to-date figure jupyter notebooks.

--- a/paper_figures/fig3_cross_validation.ipynb
+++ b/paper_figures/fig3_cross_validation.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "7fc141ba63a4c1d8",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "id": "467c68fa-40f7-49df-b57a-13e7a49dcea6",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
     "\n",
     "        if len(_x) == 0 or len(_y) == 0:\n",
     "            continue\n",
-    "            \n",
+    "\n",
     "        _stat, _pval = scipy.stats.wilcoxon(_x, _y, alternative='two-sided')\n",
     "        df_entries.append({\n",
     "            'Method A': m1,\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "id": "c53479cac4abd2e4",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 66,
    "id": "78e0e55eb7efcce2",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 67,
    "id": "8b1c6ca8668f0dc",
    "metadata": {
     "jupyter": {
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 68,
    "id": "bf983017973924db",
    "metadata": {},
    "outputs": [],
@@ -547,6 +547,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "53e5d910-2bb5-4cfa-b2de-0c987c3f3acc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table_dir = Path(\"tables/fig3_cv\")\n",
+    "table_dir.mkdir(exist_ok=True, parents=True)\n",
+    "\n",
+    "healthy_abs_df.to_csv(table_dir / \"healthy_abs.tsv\", sep=\"\\t\", index=False)\n",
+    "healthy_rel_df.to_csv(table_dir / \"healthy_rel.tsv\", sep=\"\\t\", index=False)\n",
+    "uc_abs_df.to_csv(table_dir / \"uc_abs.tsv\", sep=\"\\t\", index=False)\n",
+    "uc_rel_df.to_csv(table_dir / \"uc_rel.tsv\", sep=\"\\t\", index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "721502aa56b29fe5",
    "metadata": {},
@@ -556,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 70,
    "id": "1a4f8a4addf7b6c",
    "metadata": {},
    "outputs": [
