--- a/paper_figures/fig5_modules.ipynb
+++ b/paper_figures/fig5_modules.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 104,
    "id": "400a2e39-79c5-4c0c-a4b6-2b4ed547ff39",
    "metadata": {},
    "outputs": [],
@@ -203,7 +203,7 @@
     "        tree_fname=tree_fname, names=grampos_taxanames, taxa=taxa, fig=fig,\n",
     "        ax=ax_grampos_tree, figlabel='A', figlabelax=ax_grampos_tree_full)\n",
     "\n",
-    "    ax_grampos_healthy_abund, grampos_healthy_colorder = _make_cluster_membership_heatmap(\n",
+    "    ax_grampos_healthy_abund, grampos_healthy_colorder, grampos_module_df = _make_cluster_membership_heatmap(\n",
     "        chainname=chain_healthy, study_pkl=healthy_pkl, ax=ax_grampos_healthy_abund,\n",
     "        order=grampos_taxaname_order, vmax=max_, vmin=min_,\n",
     "        filter_taxa=healthy_filter, binary=False, fig=fig, make_colorbar=False, count=1)\n",
@@ -222,7 +222,7 @@
     "        tree_fname=tree_fname, names=gramneg_taxanames, taxa=taxa, fig=fig,\n",
     "        ax=ax_gramneg_tree, figlabel='B', figlabelax=ax_gramneg_tree_full)\n",
     "\n",
-    "    ax_gramneg_healthy_abund, gramneg_healthy_colorder = _make_cluster_membership_heatmap(\n",
+    "    ax_gramneg_healthy_abund, gramneg_healthy_colorder, gramneg_module_df = _make_cluster_membership_heatmap(\n",
     "        chainname=chain_healthy, study_pkl=healthy_pkl, ax=ax_gramneg_healthy_abund,\n",
     "        order=gramneg_taxaname_order, vmax=max_, vmin=min_, filter_taxa=healthy_filter,\n",
     "        binary=False, fig=fig, make_colorbar=True, count=3)\n",
@@ -251,6 +251,8 @@
     "    fig.text(x=0.37, y=0.020, s=text_, fontsize=40)\n",
     "    fig.subplots_adjust(wspace=0.00, left=0.005, right=0.995, hspace=0.1,\n",
     "        top=.96, bottom=0.02)\n",
+    "\n",
+    "    return grampos_module_df, gramneg_module_df\n",
     "\n",
     "def _remove_border(ax):\n",
     "    ax.spines['top'].set_visible(False)\n",
@@ -668,6 +670,7 @@
     "    vals = df.values\n",
     "    vals += min_rel - 1e-10\n",
     "    new_vals = []\n",
+    "        \n",
     "    for x in range(vals.shape[0]):\n",
     "        otu = order[x].strip()\n",
     "\n",
@@ -728,7 +731,8 @@
     "            frameon=False, labelspacing=1)\n",
     "        lgd_ax = _remove_border(lgd_ax)\n",
     "\n",
-    "    return ax, newcolnames\n",
+    "    df[df < 1e-6] = np.nan\n",
+    "    return ax, newcolnames, df\n",
     "\n",
     "def _make_names_of_clusters(n_clusters):\n",
     "    '''Standardize the way to name the clusters so that they are all the same between\n",
@@ -747,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 105,
    "id": "6613ca3a-adec-41de-b5d1-d898dd9db811",
    "metadata": {},
    "outputs": [
@@ -775,7 +779,7 @@
     "full_taxa = study_inoc.taxa\n",
     "\n",
     "\"\"\" render figure \"\"\"\n",
-    "phylogenetic_heatmap_gram_split(\n",
+    "grampos_values, gramneg_values = phylogenetic_heatmap_gram_split(\n",
     "    inoc_pkl=study_inoc, \n",
     "    healthy_pkl=study_healthy,\n",
     "    chain_healthy=fixed_cluster_mcmc_path, \n",
@@ -798,8 +802,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "id": "823ababe-55f8-4fde-966b-cc92f33028a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table_dir = Path(\"tables/fig5_modules\")\n",
+    "table_dir.mkdir(exist_ok=True, parents=True)\n",
+    "\n",
+    "grampos_values.to_csv(table_dir / \"gram_pos.tsv\", sep='\\t', index=True)\n",
+    "gramneg_values.to_csv(table_dir / \"gram_neg.tsv\", sep='\\t', index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db9785c3-a394-4122-ad04-6f49197d9f23",
    "metadata": {},
    "outputs": [],
    "source": []
