updated jupyter notebooks, added README.md for paper_figures subdir. updated evaluate_errors.sh in cross_validation to remove commented out blocks.

--- a/paper_figures/sup_cv_prior_comparison.ipynb
+++ b/paper_figures/sup_cv_prior_comparison.ipynb
@@ -387,8 +387,7 @@
     "base_dir = Path('/data/cctm/youn/MDSINE2_Paper/datasets/gibson/cross_validation')\n",
     "\n",
     "subdirs = {\n",
-    "    # 'Default-old': 'mdsine2-modules', \n",
-    "    'Default': base_dir / 'default_new',\n",
+    "    'Default-old': 'mdsine2-modules', \n",
     "    'Edge-Density-1': base_dir / 'edge_density_1',\n",
     "    'Edge-Density-2': base_dir / 'edge_density_2',\n",
     "    'Edge-Density-3': base_dir / 'edge_density_3',\n",
