fixed jupyter notebook bugs after sandbox testing

--- a/paper_figures/fig2_mice.ipynb
+++ b/paper_figures/fig2_mice.ipynb
@@ -15,17 +15,25 @@
    "source": [
     "## Before you start\n",
     "\n",
-    "Run the accompanying shell script `fig3_preprocess.sh` found in this directory, which should run out-of-the-box.\n",
+    "Run the accompanying shell script `fig2_preprocess.sh` found in this directory, which should run out-of-the-box.\n",
     "\n",
     "That script is a re-implementation of the one found in `scripts/preprocess/agglomerate_asvs.sh`. Effectively, it will generate a collection of dataset pickle files -- essentially copies of ones used in the inference -- but with the first two timepoints `t=0, t=0.5` re-inserted."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "0194568e-d7cc-4dc0-af8e-e98a882b6a4d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[DEBUG] Using default logger (stdout, stderr).\n"
+     ]
+    }
+   ],
    "source": [
     "# import statements\n",
     "from typing import *\n",
@@ -57,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b85963c5-5ae4-48c7-8008-dfb7386d84c8",
    "metadata": {},
    "outputs": [],
@@ -70,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "187e0d23-33be-4a9c-98fa-13e2c4a14d36",
    "metadata": {},
    "outputs": [
@@ -94,21 +102,19 @@
     "uc_inoc_pkl = data_dir / 'uc' / 'gibson_inoculum_agg_full_timepoints.pkl'\n",
     "uc_pkl = data_dir / 'uc' / 'gibson_uc_agg_full_timepoints.pkl'\n",
     "\n",
-    "print(healthy_inoc_pkl.exists())\n",
-    "print(healthy_pkl.exists())\n",
-    "print(uc_inoc_pkl.exists())\n",
-    "print(uc_pkl.exists())\n",
-    "if not healthy_inoc_pkl.exists() or not healthy_pkl.exists() or not uc_inoc_pkl.exists() or not uc_pkl.exists():\n",
-    "    print(\"Run the accompanying shell script first.\")\n",
-    "else:\n",
-    "    subjset_healthy = md2.Study.load(healthy_pkl)\n",
-    "    subjset_healthy_inoc = md2.Study.load(healthy_inoc_pkl)\n",
-    "    subjset_uc = md2.Study.load(uc_pkl)\n",
-    "    subjset_uc_inoc = md2.Study.load(uc_inoc_pkl)\n",
+    "assert healthy_inoc_pkl.exists(), f\"{healthy_inoc_pkl} must exist! Run the accompanying shell script (fig2_preprocess.sh) first.\"\n",
+    "assert healthy_pkl.exists(), f\"{healthy_pkl} must exist! Run the accompanying shell script (fig2_preprocess.sh) first.\"\n",
+    "assert uc_inoc_pkl.exists(), f\"{uc_inoc_pkl} must exist! Run the accompanying shell script (fig2_preprocess.sh) first.\"\n",
+    "assert uc_pkl.exists(), f\"{uc_pkl} must exist! Run the accompanying shell script (fig2_preprocess.sh) first.\"\n",
     "\n",
+    "subjset_healthy = md2.Study.load(healthy_pkl)\n",
+    "subjset_healthy_inoc = md2.Study.load(healthy_inoc_pkl)\n",
+    "subjset_uc = md2.Study.load(uc_pkl)\n",
+    "subjset_uc_inoc = md2.Study.load(uc_inoc_pkl)\n",
     "\n",
     "table_dir = Path(\"tables/fig2_dataset\")\n",
-    "table_dir.mkdir(exist_ok=True, parents=True)"
+    "table_dir.mkdir(exist_ok=True, parents=True)\n",
+    "Path(\"plots\").mkdir(exist_ok=True, parents=True)"
    ]
   },
   {
@@ -121,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "fbc9e786-7c93-49e4-9796-ee846c76042d",
    "metadata": {},
    "outputs": [],
@@ -208,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "020dc9bb-573d-47a8-92a4-cf3b2c13196f",
    "metadata": {},
    "outputs": [
@@ -238,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "f135e9c2-6ee8-4cad-9df3-e8975fb2da5e",
    "metadata": {},
    "outputs": [
@@ -276,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "7fbe10ec-d30a-4ff6-a9aa-607a225bc096",
    "metadata": {},
    "outputs": [],
@@ -325,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "45b7e1dd-cc85-4fed-b6fb-d897c869ec6a",
    "metadata": {},
    "outputs": [
@@ -367,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "1405543f-892d-4ee7-b79f-f5a1e1272b9f",
    "metadata": {},
    "outputs": [
@@ -410,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "9691fb24-5860-4912-8c82-bd31a7d55aba",
    "metadata": {},
    "outputs": [
@@ -432,7 +438,7 @@
        " (0.7254901960784313, 0.9490196078431372, 0.9411764705882353)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "56c4bb3d-d8cc-4351-ad72-25282e2c6591",
    "metadata": {},
    "outputs": [],
@@ -480,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "c27775a6-ed5a-4161-9843-451966be9a54",
    "metadata": {},
    "outputs": [],
@@ -617,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "454bdbe9-7304-4aa2-abc4-9ace86384912",
    "metadata": {},
    "outputs": [
@@ -653,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "0a4b0746-198b-432d-9a97-46010773db79",
    "metadata": {},
    "outputs": [
@@ -697,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "ebdcc8cd-a96e-4515-a736-1fada79f1e50",
    "metadata": {},
    "outputs": [
@@ -729,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "afcc1e98-b01b-417f-8236-90e8889329b6",
    "metadata": {},
    "outputs": [
@@ -761,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "b8c48efc-2049-495e-a017-2bc16e4b6a35",
    "metadata": {},
    "outputs": [],
@@ -850,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1193,
+   "execution_count": 18,
    "id": "a846c02d-ac3e-422c-a9f0-418190946332",
    "metadata": {},
    "outputs": [
@@ -881,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "79dd2ed9-82bd-4bc4-95fe-9843d06eec40",
    "metadata": {},
    "outputs": [
@@ -912,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "34c89b49-9322-4928-aa40-4de65dbb4174",
    "metadata": {},
    "outputs": [],
@@ -923,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "550613f7-537f-4f3d-967f-82c5684ea13b",
    "metadata": {},
    "outputs": [],
@@ -977,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "id": "35d0c14f-9a06-469e-8192-23930be70cfb",
    "metadata": {},
    "outputs": [],
@@ -1135,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "id": "d3488f8f-40a8-4e7d-b20e-180f0fd4b0b1",
    "metadata": {},
    "outputs": [
@@ -1183,17 +1189,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "id": "fa52dcf1-f10e-40ad-b1b8-b881459748e1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('/data/local/MDSINE2_Paper/datasets/gibson/healthy/differential_abundance')"
+       "PosixPath('/data/local/sandbox/MDSINE2_Paper/datasets/gibson/healthy/differential_abundance')"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1212,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 25,
    "id": "45997400-c5d3-4086-aba6-d927820eb124",
    "metadata": {},
    "outputs": [
@@ -1272,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "abd6fd62-1aa2-4384-8586-4aecc79fdad6",
    "metadata": {},
    "outputs": [],
@@ -1298,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "a441e147-26b6-4699-bbe4-5bdc6038c986",
    "metadata": {},
    "outputs": [],
@@ -1390,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "7c48e1c4-e560-48e7-939a-47f04ccb037b",
    "metadata": {},
    "outputs": [
@@ -1426,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "id": "78d7b9d2-71db-4979-a9b9-99a476be34eb",
    "metadata": {},
    "outputs": [
@@ -1470,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 30,
    "id": "81cbe359-f9e4-415d-87c6-29a6fa21ef3a",
    "metadata": {},
    "outputs": [],
@@ -1750,7 +1756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 31,
    "id": "6030dca7-6376-4ff3-bde8-7dd47e6c9c86",
    "metadata": {},
    "outputs": [],
@@ -1794,7 +1800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 32,
    "id": "72f58923-0c87-4b51-b413-1f1c426b539e",
    "metadata": {},
    "outputs": [
@@ -1842,7 +1848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 34,
    "id": "ddc39024-773a-4e7b-9313-f2118ba10df2",
    "metadata": {},
    "outputs": [
@@ -1885,14 +1891,6 @@
     "uc_abundant_deseq_phylum_df.to_csv(table_dir / \"uc_abundant_deseq_phylum.tsv\", sep='\\t', index=True)\n",
     "uc_sparse_deseq_phylum_df.to_csv(table_dir / \"uc_sparse_deseq_phylum.tsv\", sep='\\t', index=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b25e136-aba9-4f91-a817-f08726ba673e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
