--- a/paper_figures/fig3_cross_validation.ipynb
+++ b/paper_figures/fig3_cross_validation.ipynb
@@ -9,11 +9,11 @@
     "\n",
     "## Before you start\n",
     "\n",
-    "This notebook assumes that the cross-validation analyses, up to and including `evaluate_errors.sh` has already been run. Please refer to the `cross_validation` pipeline located in `scripts/cross_validation`.\n",
+    "This notebook assumes that the cross-validation analyses, up to and including `evaluate_errors.sh` has already been run. \n",
     "\n",
-    "Verify that `datasets/gibson/cross_validation` has the evaluated metrics stored in `absolute_cv.tsv` and `relative_cv.tsv`, which can run off of the outputs found on Zenodo: [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.8006854.svg)](https://doi.org/10.5281/zenodo.8006854)\n",
+    "Please refer to the `cross_validation` pipeline located in `scripts/cross_validation`, or download the analysis from Zenodo (https://doi.org/10.5281/zenodo.8006854).\n",
     "\n",
-    "The data are expected to be located in the directory `../datasets/gibson/cross_validation`."
+    "The data are expected to be located in the directory `../datasets/gibson/healthy/cross_validation` for healthy cohort and `../datasets/gibson/uc/cross_validation` for dysbiotic cohort runs."
    ]
   },
   {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "7fc141ba63a4c1d8",
    "metadata": {},
    "outputs": [],
@@ -51,12 +51,14 @@
     "\n",
     "# Make font editable in AI\n",
     "matplotlib.rcParams['pdf.fonttype'] = 42\n",
-    "matplotlib.rcParams['ps.fonttype'] = 42"
+    "matplotlib.rcParams['ps.fonttype'] = 42\n",
+    "\n",
+    "Path(\"plots\").mkdir(exist_ok=True, parents=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "id": "467c68fa-40f7-49df-b57a-13e7a49dcea6",
    "metadata": {},
    "outputs": [],
@@ -99,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "c53479cac4abd2e4",
    "metadata": {},
    "outputs": [],
@@ -128,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "id": "78e0e55eb7efcce2",
    "metadata": {},
    "outputs": [],
@@ -239,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "id": "8b1c6ca8668f0dc",
    "metadata": {
     "jupyter": {
@@ -486,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "id": "bf983017973924db",
    "metadata": {},
    "outputs": [],
@@ -520,7 +522,6 @@
     "uc_base_dir = Path('../datasets/gibson/uc/cross_validation')\n",
     "uc_abs_df = pd.concat([\n",
     "    pd.read_csv(uc_base_dir / \"mdsine2-modules\" / \"absolute_cv.tsv\", sep='\\t').assign(Method=\"MDSINE2\"),\n",
-    "    pd.read_csv(uc_base_dir / \"mdsine2-modules-seed10\" / \"absolute_cv.tsv\", sep='\\t').assign(Method=\"MDSINE2_seed10\"),\n",
     "    pd.read_csv(uc_base_dir / \"mdsine2-nomodules\" / \"absolute_cv.tsv\", sep='\\t').assign(Method=\"MDSINE2 (No Modules)\"),\n",
     "    pd.read_csv(uc_base_dir / \"mdsine2-noqpcr-modules\" / \"absolute_cv.tsv\", sep='\\t').assign(Method=\"RA-MDSINE2\"),\n",
     "    pd.read_csv(uc_base_dir / \"mdsine2-noqpcr-nomodules\" / \"absolute_cv.tsv\", sep='\\t').assign(Method=\"RA-MDSINE2 (No Modules)\"),\n",
@@ -533,7 +534,6 @@
     "])\n",
     "uc_rel_df = pd.concat([\n",
     "    pd.read_csv(uc_base_dir / \"mdsine2-modules\" / \"relative_cv.tsv\", sep='\\t').assign(Method=\"MDSINE2\"),\n",
-    "    pd.read_csv(uc_base_dir / \"mdsine2-modules-seed10\" / \"relative_cv.tsv\", sep='\\t').assign(Method=\"MDSINE2_seed10\"),\n",
     "    pd.read_csv(uc_base_dir / \"mdsine2-nomodules\" / \"relative_cv.tsv\", sep='\\t').assign(Method=\"MDSINE2 (No Modules)\"),\n",
     "    pd.read_csv(uc_base_dir / \"mdsine2-noqpcr-modules\" / \"relative_cv.tsv\", sep='\\t').assign(Method=\"RA-MDSINE2\"),\n",
     "    pd.read_csv(uc_base_dir / \"mdsine2-noqpcr-nomodules\" / \"relative_cv.tsv\", sep='\\t').assign(Method=\"RA-MDSINE2 (No Modules)\"),\n",
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "id": "53e5d910-2bb5-4cfa-b2de-0c987c3f3acc",
    "metadata": {},
    "outputs": [],
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "id": "1a4f8a4addf7b6c",
    "metadata": {},
    "outputs": [
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "d7e31f70-e9d4-4c6a-ae06-3c94149bfd6e",
    "metadata": {},
    "outputs": [],
@@ -690,63 +690,6 @@
     "healthy_rel_errors_pvals.to_csv(\"plots/cv_healthy_rel_pvals.tsv\", sep='\\t', index=False)\n",
     "uc_abs_errors_pvals.to_csv(\"plots/cv_uc_abs_pvals.tsv\", sep='\\t', index=False)\n",
     "uc_rel_errors_pvals.to_csv(\"plots/cv_uc_rel_pvals.tsv\", sep='\\t', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fddde4089b6ef257",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "method_order = ['MDSINE2', 'MDSINE2 (No Modules)', 'gLV (ridge)', 'gLV (elastic net)', 'gLV-RA (ridge)', 'gLV-RA (elastic net)', 'cLV', 'LRA']\n",
-    "method_labels = {\n",
-    "    'MDSINE2': 'MDSINE2',\n",
-    "    'MDSINE2 (No Modules)': r'MDSINE$2^{-M}$',\n",
-    "    'cLV': 'cLV',\n",
-    "    'gLV-RA (ridge)': 'RA-gLV-L2',\n",
-    "    'gLV-RA (elastic net)': 'RA-gLV-net',\n",
-    "    'gLV (elastic net)': 'gLV-net',\n",
-    "    'gLV (ridge)': 'gLV-L2',\n",
-    "    'LRA': 'RA-L'\n",
-    "}\n",
-    "palette_tab20 = sns.color_palette(\"tab10\", len(method_order))\n",
-    "method_colors = {m: palette_tab20[i] for i, m in enumerate(method_order)}\n",
-    "\n",
-    "\n",
-    "fig = plt.figure(figsize=(14, 6))\n",
-    "gs = fig.add_gridspec(2, 2, width_ratios=[1, 3.5], height_ratios=[1, 10], hspace=0.6)\n",
-    "ax = [\n",
-    "    fig.add_subplot(gs[:, 0]),  # unbinned plot\n",
-    "    fig.add_subplot(gs[0, 1:]),  # quantiles\n",
-    "    fig.add_subplot(gs[1, 1:]),  # binned nonzeroes\n",
-    "]\n",
-    "\n",
-    "# =========== add A/B/C/D labels\n",
-    "for n, _ax in enumerate(ax):\n",
-    "    trans = mtransforms.ScaledTranslation(-25/72, -3/72, fig.dpi_scale_trans)\n",
-    "    _ax.text(0, 1, string.ascii_uppercase[n], transform=_ax.transAxes + trans,\n",
-    "             va='bottom', fontfamily='sans-serif', weight='bold', size=15)\n",
-    "\n",
-    "num_bins = 10\n",
-    "lb = 1e-10\n",
-    "ub = 1.\n",
-    "make_boxplot(ax[0], rel_df, method_order, method_labels, method_colors,\n",
-    "             xlabel='', ylabel='RMSE ($\\log_{10}$ relative)', lb=lb, eps=1e-30)\n",
-    "make_grouped_boxplot(ax[1], ax[2], rel_df, method_order, method_labels, method_colors,\n",
-    "                     num_bins=num_bins, error_ylabel='RMSE ($\\log_{10}$ relative)', lb=lb, eps=1e-30)\n",
-    "\n",
-    "legend_elements = [\n",
-    "    Patch(facecolor=method_colors[_m], edgecolor='black', label=method_labels[_m], linewidth=0.5)\n",
-    "    for _m in method_order\n",
-    "]\n",
-    "fig.legend(handles=legend_elements, ncol=8, bbox_to_anchor=(0.5, 0.98), loc='upper center')\n",
-    "\n",
-    "plt.tight_layout()"
    ]
   }
  ],
