--- a/paper_figures/fig5_modules.ipynb
+++ b/paper_figures/fig5_modules.ipynb
@@ -9,6 +9,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c1cab9ca-4f3b-4621-b5ec-ab1b3569d23c",
+   "metadata": {},
+   "source": [
+    "# Before running this notebook\n",
+    "\n",
+    "Ensure that the directory for fixed-cluster analysis output (`datasets/gibson/healthy/output/mdsine2/inference/merged_studies_fixed_cluster/mcmc.pkl`) exists and is discoverable.\n",
+    "Analysis files used in our paper can be found on Zenodo (https://doi.org/10.5281/zenodo.8208502)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "f8abceea-581e-45c9-b7a9-fcc51af54b9c",
@@ -44,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "4b71494a-4f86-4246-a176-ff172aad89a5",
    "metadata": {},
    "outputs": [],
@@ -72,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 3,
    "id": "400a2e39-79c5-4c0c-a4b6-2b4ed547ff39",
    "metadata": {},
    "outputs": [],
@@ -751,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 4,
    "id": "6613ca3a-adec-41de-b5d1-d898dd9db811",
    "metadata": {},
    "outputs": [
@@ -802,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 5,
    "id": "823ababe-55f8-4fde-966b-cc92f33028a1",
    "metadata": {},
    "outputs": [],
