--- a/paper_figures/fig4_semisynthetic_v2_cache.ipynb
+++ b/paper_figures/fig4_semisynthetic_v2_cache.ipynb
@@ -2,6 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "0a3501ee-b315-4473-a961-438589f3df09",
+   "metadata": {},
+   "source": [
+    "# Before running this notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "003de277-f560-414a-b9b7-db01c117953b",
+   "metadata": {},
+   "source": [
+    "Ensure that the semisynthetic analysis has been performed.\n",
+    "\n",
+    "The source dataset can be found on Zenodo ([todo insert link])."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1b3adc84-5328-44e2-a750-6d09bd7bab45",
    "metadata": {},
    "source": [
@@ -10,18 +28,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4532141f-4ef4-48a0-9e02-8dcb24a9e562",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[DEBUG] Using default logger (stdout, stderr).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "from typing import *\n",
@@ -52,6 +62,7 @@
     "import statsmodels.stats\n",
     "import statsmodels.stats.multitest\n",
     "\n",
+    "Path(\"plots\").mkdir(exist_ok=True, parents=True)\n",
     "# import sys\n",
     "# sys.path = ['/data/local/MDSINE2_Paper/paper_figures', 'submodules/clv_fork', '/home/youn/mambaforge/envs/mdsine2/lib/python37.zip', '/home/youn/mambaforge/envs/mdsine2/lib/python3.7', '/home/youn/mambaforge/envs/mdsine2/lib/python3.7/lib-dynload', '', '/home/youn/mambaforge/envs/mdsine2/lib/python3.7/site-packages', '/home/youn/work/MDSINE2', '/home/youn/mambaforge/envs/mdsine2/lib/python3.7/site-packages/IPython/extensions', '/home/youn/.ipython']\n",
     "# from generalized_lotka_volterra import GeneralizedLotkaVolterra"
@@ -59,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "4e3c2d2d-9aae-4cda-ad3b-6973278da882",
    "metadata": {},
    "outputs": [],
@@ -71,14 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "id": "cdeb4e9c-1ae8-4677-8bac-79d0a6623d0d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "GLV_TRUTH_SIM_DIR = Path(\"/data/cctm/youn/MDSINE2_Paper/datasets/semisynthetic2/truth\")\n",
-    "BASE_STUDY_PATH = Path(\"/data/local/MDSINE2_Paper/datasets/gibson/healthy/preprocessed/gibson_healthy_agg_filtered.pkl\")  # for extracting perturbation names and taxaset\n",
-    "SEMISYN_ANALYSIS_DIR = Path(\"/data/cctm/youn/MDSINE2_semisynthetic2/output\")"
+    "GLV_TRUTH_SIM_DIR = Path().resolve().parent / \"datasets\" / \"semisynthetic2\" / \"truth\"\n",
+    "BASE_STUDY_PATH = Path().resolve().parent / \"datasets\" / \"gibson\" / \"healthy\" / \"preprocessed\" / \"gibson_healthy_agg_filtered.pkl\"  # for extracting perturbation names and taxaset\n",
+    "SEMISYN_ANALYSIS_DIR = Path().resolve().parent / \"datasets\" / \"semisynthetic2\" / \"output\""
    ]
   },
   {
