fix after sandbox testing

--- a/paper_figures/sup_cv_prior_comparison.ipynb
+++ b/paper_figures/sup_cv_prior_comparison.ipynb
@@ -12,12 +12,12 @@
     "This notebook assumes that the cross-validation analyses, up to and including `evaluate_errors.sh` has already been run.\n",
     "In addition, we require the prior_comparisons script to be finished.\n",
     "\n",
-    "The data are expected to be located in the directory `../datasets/gibson/cross_validation`."
+    "The data are expected to be located in the directory `../datasets/gibson/healthy/cross_validation_prior_comparison`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "id": "eff9e2bc-9727-422b-8345-aa7e9b64f0ed",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "d99fc2e9-e47b-4b62-9f8d-2062e066f7c3",
    "metadata": {},
    "outputs": [],
@@ -377,67 +377,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "7d3b8b75-1174-4c38-a9a2-91c8a9a052a9",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "reading prior Default from subdir other_priors/default_new\n",
+      "reading prior Edge-Density-1 from subdir other_priors/edge_density_1\n",
+      "reading prior Edge-Density-2 from subdir other_priors/edge_density_2\n",
+      "reading prior Edge-Density-3 from subdir other_priors/edge_density_3\n",
+      "reading prior Edge-Density-4 from subdir other_priors/edge_density_4\n",
+      "reading prior Edge-Density-5 from subdir other_priors/edge_density_5\n",
+      "reading prior Growth-SI-Var-1 from subdir other_priors/growth_si_var_1\n",
+      "reading prior Growth-SI-Var-2 from subdir other_priors/growth_si_var_2\n",
+      "reading prior Growth-SI-Var-3 from subdir other_priors/growth_si_var_3\n",
+      "reading prior Growth-SI-Var-4 from subdir other_priors/growth_si_var_4\n",
+      "reading prior Interaction-Var-1 from subdir other_priors/interaction_var_1\n",
+      "reading prior Interaction-Var-2 from subdir other_priors/interaction_var_2\n",
+      "reading prior Interaction-Var-3 from subdir other_priors/interaction_var_3\n",
+      "reading prior Interaction-Var-4 from subdir other_priors/interaction_var_4\n",
+      "reading prior Pert-Var-1 from subdir other_priors/pert_var_1\n",
+      "reading prior Pert-Var-2 from subdir other_priors/pert_var_2\n",
+      "reading prior Pert-Var-3 from subdir other_priors/pert_var_3\n",
+      "reading prior Pert-Var-4 from subdir other_priors/pert_var_4\n",
+      "reading prior Elastic-Net from subdir regression_glv_elastic_net\n"
+     ]
+    }
+   ],
    "source": [
-    "base_dir = Path('/data/cctm/youn/MDSINE2_Paper/datasets/gibson/cross_validation')\n",
+    "base_dir = Path('/data/local/MDSINE2_Paper/datasets/gibson/healthy/cross_validation')\n",
     "\n",
     "subdirs = {\n",
-    "    'Default-old': 'mdsine2-modules', \n",
-    "    'Edge-Density-1': base_dir / 'edge_density_1',\n",
-    "    'Edge-Density-2': base_dir / 'edge_density_2',\n",
-    "    'Edge-Density-3': base_dir / 'edge_density_3',\n",
-    "    'Edge-Density-4': base_dir / 'edge_density_4',\n",
-    "    'Edge-Density-5': base_dir / 'edge_density_5',\n",
-    "    'Growth-SI-Var-1': base_dir / 'growth_si_var_1',\n",
-    "    'Growth-SI-Var-2': base_dir / 'growth_si_var_2',\n",
-    "    'Growth-SI-Var-3': base_dir / 'growth_si_var_3',\n",
-    "    'Growth-SI-Var-4': base_dir / 'growth_si_var_4',\n",
-    "    'Interaction-Var-1': base_dir / 'interaction_var_1',\n",
-    "    'Interaction-Var-2': base_dir / 'interaction_var_2',\n",
-    "    'Interaction-Var-3': base_dir / 'interaction_var_3',\n",
-    "    'Interaction-Var-4': base_dir / 'interaction_var_4',\n",
-    "    'Pert-Var-1': base_dir / 'pert_var_1',\n",
-    "    'Pert-Var-2': base_dir / 'pert_var_2',\n",
-    "    'Pert-Var-3': base_dir / 'pert_var_3',\n",
-    "    'Pert-Var-4': base_dir / 'pert_var_4',\n",
-    "    # 'Dense-Sparsity': 'mdsine2-modules-interaction-density-dense',\n",
-    "    # 'Sparse-Sparsity': 'mdsine2-modules-interaction-density-sparse',\n",
-    "    # 'Medium-Sparsity': 'mdsine2-modules-interaction-density-medium',\n",
-    "    # 'Positive-Strength': 'mdsine2-modules-interaction-strength-positive',\n",
-    "    # 'Negative-Strength': 'mdsine2-modules-interaction-strength-negative',\n",
-    "    # 'Zero-Strength': 'mdsine2-modules-interaction-strength-zero',\n",
-    "    # 'Zero-Strength-TINYSCALE2': 'mdsine2-modules-interaction-strength-zero-TINYSCALE2',\n",
-    "    # 'Zero-Strength-TINYSCALE3': 'mdsine2-modules-interaction-strength-zero-TINYSCALE3',\n",
-    "    # 'Default2': 'mdsine2-modules-default',\n",
-    "    # # 'Zero-Master': 'mdsine2-modules-interaction-strength-zero-MASTER',\n",
-    "    # 'Zero-Rerun': 'mdsine2-modules-interaction-strength-zero-RERUN',\n",
-    "    # 'Default-SICS-Medium': 'mdsine2-modules-default-sics-medium',\n",
-    "    # 'Default-SICS-Small': 'mdsine2-modules-default-sics-small',\n",
-    "    # 'mh-Learn': 'mdsine2-modules-mhlearn',\n",
-    "    # 'mh-Learn2': 'mdsine2-modules-mhlearn2',\n",
-    "    # 'Zero-Strength-lowdof': 'mdsine2-modules-interaction-strength-zero-lowdof',\n",
-    "    # 'PertInteractionScale': 'mdsine2-modules-inter-var-smallscale'\n",
+    "    'Default': 'other_priors/default_new', \n",
+    "    'Edge-Density-1': 'other_priors/edge_density_1',\n",
+    "    'Edge-Density-2': 'other_priors/edge_density_2',\n",
+    "    'Edge-Density-3': 'other_priors/edge_density_3',\n",
+    "    'Edge-Density-4': 'other_priors/edge_density_4',\n",
+    "    'Edge-Density-5': 'other_priors/edge_density_5',\n",
+    "    'Growth-SI-Var-1': 'other_priors/growth_si_var_1',\n",
+    "    'Growth-SI-Var-2': 'other_priors/growth_si_var_2',\n",
+    "    'Growth-SI-Var-3': 'other_priors/growth_si_var_3',\n",
+    "    'Growth-SI-Var-4': 'other_priors/growth_si_var_4',\n",
+    "    'Interaction-Var-1': 'other_priors/interaction_var_1',\n",
+    "    'Interaction-Var-2': 'other_priors/interaction_var_2',\n",
+    "    'Interaction-Var-3': 'other_priors/interaction_var_3',\n",
+    "    'Interaction-Var-4': 'other_priors/interaction_var_4',\n",
+    "    'Pert-Var-1': 'other_priors/pert_var_1',\n",
+    "    'Pert-Var-2': 'other_priors/pert_var_2',\n",
+    "    'Pert-Var-3': 'other_priors/pert_var_3',\n",
+    "    'Pert-Var-4': 'other_priors/pert_var_4',\n",
+    "    'Elastic-Net': 'regression_glv_elastic_net',\n",
     "}\n",
     "\n",
     "# .assign(Method='Elastic-Net')\n",
-    "elastic_net_abs_df = pd.read_csv(Path('/data/local/MDSINE2_Paper/datasets/gibson/healthy/cross_validation/absolute_cv.tsv'), sep='\\t')\n",
-    "elastic_net_abs_df = elastic_net_abs_df.loc[elastic_net_abs_df['Method'] == 'gLV (elastic net)'].assign(Method='Elastic-Net')\n",
+    "# elastic_net_abs_df = pd.read_csv(Path('/data/local/MDSINE2_Paper/datasets/gibson/healthy/cross_validation/absolute_cv.tsv'), sep='\\t')\n",
+    "# elastic_net_abs_df = elastic_net_abs_df.loc[elastic_net_abs_df['Method'] == 'gLV (elastic net)'].assign(Method='Elastic-Net')\n",
     "\n",
-    "abs_df = pd.concat([\n",
-    "    pd.read_csv(base_dir / subdir / \"absolute_cv.tsv\", sep='\\t').assign(Method=prior_name)\n",
-    "    for prior_name, subdir in subdirs.items()\n",
-    "] + [\n",
-    "    elastic_net_abs_df\n",
-    "])\n",
-    "# rel_df = pd.concat([\n",
-    "#     pd.read_csv(base_dir / subdir / \"relative_cv.tsv\", sep='\\t').assign(Method=prior_name)\n",
-    "#     for prior_name, subdir in subdirs.items()\n",
-    "# ])"
+    "abs_df = []\n",
+    "for prior_name, subdir in subdirs.items():\n",
+    "    print(\"reading prior {} from subdir {}\".format(prior_name, subdir))\n",
+    "    _df = pd.read_csv(base_dir / subdir / \"absolute_cv.tsv\", sep='\\t').assign(Method=prior_name)\n",
+    "    abs_df.append(_df)\n",
+    "abs_df = pd.concat(abs_df, ignore_index=True)"
    ]
   },
   {
@@ -450,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "a62312a3-d2f2-4c71-bf1e-fff73adecbc8",
    "metadata": {},
    "outputs": [],
@@ -493,8 +499,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "ca9fedb6-5b4b-46a8-a7da-b19e043256a6",
+   "execution_count": 22,
+   "id": "a83aa924-fc2e-4735-a739-6ff8eec6ea84",
    "metadata": {},
    "outputs": [
     {
@@ -509,14 +515,6 @@
     }
    ],
    "source": [
-    "# layout = [\n",
-    "#     [\"EdgeDensityMath\",   \"InteractionVarMath\"],\n",
-    "#     [\"EdgeDensityPlot\",   \"InteractionVarPlot\"],\n",
-    "#     [\"EdgeDensityLegend\", \"InteractionVarLegend\"],\n",
-    "#     [\"GrowthSIVarMath\", \"PertVarMath\"],\n",
-    "#     [\"GrowthSIVarPlot\", \"PertVarPlot\"],\n",
-    "#     [\"GrowthSIVarLegend\", \"PertVarLegend\"]\n",
-    "# ]\n",
     "layout = [\n",
     "    [\"GrowthSIVarMath_1\", \"GrowthSIVarMath_2\", \"GrowthSIVarPlot\"],\n",
     "    [\"GrowthSIVarLegend\", \"GrowthSIVarLegend\", \"GrowthSIVarPlot\"],\n",
