fix after sandbox testing

--- a/paper_figures/sup_cv_prior_comparison.ipynb
+++ b/paper_figures/sup_cv_prior_comparison.ipynb
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "7d3b8b75-1174-4c38-a9a2-91c8a9a052a9",
    "metadata": {
     "scrolled": true
@@ -410,7 +410,7 @@
     }
    ],
    "source": [
-    "base_dir = Path('/data/local/MDSINE2_Paper/datasets/gibson/healthy/cross_validation')\n",
+    "base_dir = Path().resolve().parent / \"datasets\" / \"gibson\" / \"healthy\" / \"cross_validation\"\n",
     "\n",
     "subdirs = {\n",
     "    'Default': 'other_priors/default_new', \n",
